--- a/index.html
+++ b/index.html
@@ -3,6 +3,49 @@
 
 <head>
     <!-- Google Tag Manager -->
+<!-- Iklan Floating -->
+<style scoped='' type='text/css'>
+.fixed-leftSd,.fixed-rightSd{position:fixed;top:70px;width:160px;height:590px;z-index:9999;transform:translateZ(0)}
+.fixed-leftSd{left:0}
+.fixed-rightSd{right:0}
+.close-fixedSd{position:absolute;width:160px;height:15px;line-height:5px;font-size:11px;font-weight:400;top:-15px;left:0;text-align:center;background:#e0e0e0;color:#666;padding:5px 0;cursor:pointer}
+@media screen and (max-width:800px){.fixed-leftSd,.fixed-rightSd{display:none;visibility:hidden;}}
+</style>
+
+<div class="fixed-leftSd">
+<div aria-label="Close Ads" class="close-fixedSd" role="button" tabindex="0" onclick="this.parentElement.style.display=&quot;none&quot;">
+Close Ads Here
+</div>
+<script type="text/javascript">
+	atOptions = {
+		'key' : '3c2625e0930bf4a96117a7d933e3cc3e',
+		'format' : 'iframe',
+		'height' : 600,
+		'width' : 160,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.topcreativeformat.com/3c2625e0930bf4a96117a7d933e3cc3e/invoke.js"></script>
+</div>
+
+
+<div class="fixed-rightSd">
+<div aria-label="Close Ads" class="close-fixedSd" role="button" tabindex="0" onclick="this.parentElement.style.display=&quot;none&quot;">
+Close Ads Here
+</div>
+
+<script type="text/javascript">
+	atOptions = {
+		'key' : '3c2625e0930bf4a96117a7d933e3cc3e',
+		'format' : 'iframe',
+		'height' : 600,
+		'width' : 160,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.topcreativeformat.com/3c2625e0930bf4a96117a7d933e3cc3e/invoke.js"></script>
+
+</div>
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
